# ReproductorMP3

./: .gitignore  README.md  partitions.csv
components/led_strip/src/: led_strip_rmt_ws2812.c
components/mi_audio/: CMakeLists.txt  alive.pcm  butterfly.pcm  dance.pcm  doom.pcm  i2s_es8311_example.c  idf_component.yml  mi_audio.c  mission.pcm  pacman.pcm  tetris.pcm  undertale.pcm
components/mi_audio/include/: mi_audio.h  mi_audio_config.h
components/mi_config/: CMakeLists.txt  mi_config.c
components/mi_config/include/: mi_config.h
components/mi_fs/: CMakeLists.txt  idf_component.yml  mi_fs.c
components/mi_fs/flash_data/: config.json  logger.json
components/mi_fs/include/: mi_fs.h
components/mi_led/: mi_led.c
components/mi_mqtt/: CMakeLists.txt  mi_mqtt.c
components/mi_mqtt/include/: mi_mqtt.h
components/mi_ntp_time/: CMakeLists.txt  mi_ntp_time.c
components/mi_ntp_time/include/: mi_ntp_time.h
components/mi_queue/: CMakeLists.txt  mi_queue.c
components/mi_queue/include/: mi_queue.h
components/mi_task_a/: CMakeLists.txt  mi_task_a.c
components/mi_task_b/: CMakeLists.txt  mi_task_b.c
components/mi_task_c/: CMakeLists.txt  mi_task_c.c
components/mi_touch/: CMakeLists.txt  mi_touch.c
components/mi_web_server/: CMakeLists.txt  index.html  mi_web_server.c  mi_web_server.h
components/mi_web_server/include/: mi_web_server.h
components/mi_wifi_ap/: CMakeLists.txt  mi_wifi_ap.c
components/nvs_handler/: CMakeLists.txt  nvs_handler.c
components/spiff_handler/: CMakeLists.txt  spiff_handler.c
main/: CMakeLists.txt  main.c
(+7 files in other folders)
